# cccm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.cccm/: config.json
.cccm/memory/: constraints.md  decisions.md  glossary.md  interfaces.md
.claude/: settings.json
docs/: prd1.md  prd2.md  prd3.md
src/cccm/: __init__.py  cli.py  mcp_server.py
src/cccm/core/: __init__.py  decisions.py  memory.py  search.py  snapshot.py
src/cccm/hooks/: __init__.py  runner.py
tests/: test_cli.py  test_decisions.py  test_hooks.py  test_mcp_server.py  test_memory.py  test_search.py  test_snapshot.py  test_v1_hooks.py
