[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cccm"
version = "0.1.0"
description = "Claude Code Context Manager — persistent memory and context management for Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pedro Maia" },
]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
cccm = "cccm.cli:main"
cccm-mcp = "cccm.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cccm"]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
